--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://localhost:3033/api/v1/
+REACT_APP_USER_API_URL=http://localhost:3033/api/v1/
+REACT_APP_TODO_API_URL=http://localhost:3031/api/v1/
