image upload to s3 integration, setup not working

--- a/backend/auth/.env
+++ b/backend/auth/.env
@@ -1,3 +1,5 @@
 PORT=3033
 JWT_SECRET="I am just a guy who is a hero for fun, although more like a loser for fun"
 MONGO_URI="mongodb+srv://senior-todo-app:Sen_Mongodb01@thejuniormentor.c4gwy.mongodb.net/senior_todo_database?retryWrites=true&w=majority&appName=TheJuniorMentor"
+AWS_ACCESS_KEY_ID="364912848366"
+AWS_SECRET_ACCESS_KEY=""
