--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-scripts": "5.0.1",
+    "react-ui-components-superflows": "^1.0.30",
+    "react-ui-themes-superflows": "^1.0.19",
+    "react-upload-to-s3": "^1.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
