moved secret keys to the .env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,6 @@
 REACT_APP_USER_API_URL=http://localhost:3033/api/v1/
 REACT_APP_TODO_API_URL=http://localhost:3031/api/v1/
+REACT_APP_AWS_BUCKET="senior-todo-app-bucket"
+REACT_APP_AWS_REGION="us-east-1"
+REACT_APP_AWS_ACCESS_KEY="AKIAVJ5UAFXXGLOJ7D7C"
+REACT_APP_AWS_SECRET_KEY="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"
